Added config for deploy AWS Elastic Beanstalk